# clips-uml-to-java

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .prettierignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.prod  Makefile  README.md  TEMPLATE.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
frontend/: .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  index.html  package.json  vite.config.js
frontend/src/: App.svelte  app.css
src/: example.step.py  server.py
